--- a/src/index.css
+++ b/src/index.css
@@ -193,24 +193,25 @@ button {
   color: #2c2c2c;
 }
 
-/* .nameInput {
+.nameInput {
   margin-bottom: 2rem;
   background: url('./assets/svg/badgeIcon.svg') #ffffff 2.5% center no-repeat;
 }
 
+
 .emailInput {
   margin-bottom: 2rem;
   background: url('./assets/svg/personIcon.svg') #ffffff 2.5% center no-repeat;
-} */
+}
 
 .passwordInputDiv {
   position: relative;
 }
 
-/* .passwordInput {
+.passwordInput {
   margin-bottom: 2rem;
   background: url('./assets/svg/lockIcon.svg') #ffffff 2.5% center no-repeat;
-} */
+}
 
 .showPassword {
   cursor: pointer;
