--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ button {
 .input,
 .passwordInput,
 .emailInput,
+.phoneInput,
 .nameInput,
 .textarea {
   box-shadow: rgba(0, 0, 0, 0.11);
@@ -200,6 +201,11 @@ button {
 
 
 .emailInput {
+  margin-bottom: 2rem;
+  background: url('./assets/svg/personIcon.svg') #ffffff 2.5% center no-repeat;
+}
+
+.phoneInput {
   margin-bottom: 2rem;
   background: url('./assets/svg/personIcon.svg') #ffffff 2.5% center no-repeat;
 }
