--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@ html::-webkit-scrollbar {
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f2f4f8;
-  margin: 0;
+  margin: 0 auto;
   box-sizing: border-box;
+  max-width: 1000px;
 }
 
 a {
@@ -63,7 +64,7 @@ button {
 
 .primaryButton {
   cursor: pointer;
-  background: #00cc66;
+  background: #00d9ff;
   border-radius: 1rem;
   padding: 0.85rem 2rem;
   color: #ffffff;
@@ -79,15 +80,18 @@ button {
 .removeIcon {
   cursor: pointer;
   position: absolute;
-  top: -3%;
+  top: 3%;
   right: -2%;
+  margin-right: 2rem;
+
 }
 
 .editIcon {
   cursor: pointer;
   position: absolute;
-  top: -3.4%;
+  top: 3%;
   right: 20px;
+  margin-right: 2rem;
 }
 
 .pageContainer,
@@ -128,7 +132,7 @@ button {
   width: 64px;
   height: 64px;
   border: 8px solid;
-  border-color: #00cc66 transparent #00cc66 transparent;
+  border-color: #00d9ff transparent #00d9ff transparent;
   border-radius: 50%;
   animation: spin 1.2s linear infinite;
 }
@@ -229,7 +233,7 @@ button {
 
 .forgotPasswordLink {
   cursor: pointer;
-  color: #00cc66;
+  color: #00d9ff;
   font-weight: 600;
   text-align: right;
 }
@@ -271,7 +275,7 @@ button {
   align-items: center;
   width: 3rem;
   height: 3rem;
-  background-color: #00cc66;
+  background-color: #00d9ff;
   border-radius: 50%;
 }
 
@@ -310,7 +314,7 @@ button {
 
 .registerLink {
   margin-top: 4rem;
-  color: #00cc66;
+  color: #00d9ff;
   font-weight: 600;
   text-align: center;
   margin-bottom: 3rem;
@@ -350,6 +354,8 @@ button {
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 1.5rem;
+  background: #ffffff;
 }
 
 .swiperSlideImg {
@@ -396,11 +402,13 @@ button {
 .exploreCategories {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .exploreCategories a {
-  width: 48%;
+  width: 30%;
+  min-width: 200px;
+  min-height: 200px;
 }
 
 .exploreCategoryImg {
@@ -431,6 +439,8 @@ button {
   align-items: center;
   margin-bottom: 1rem;
   position: relative;
+  background: #ffffff;
+  border-radius: 1.5rem;
 }
 
 .categoryListingLink {
@@ -466,6 +476,7 @@ button {
   font-size: 0.7rem;
   opacity: 0.8;
   margin-bottom: 0;
+  margin-right: 1rem;
 }
 
 .categoryListingName {
@@ -478,7 +489,7 @@ button {
   margin-top: 0.5rem;
   font-weight: 600;
   font-size: 1.1rem;
-  color: #00cc66;
+  color: #00d9ff;
   margin-bottom: 0;
   display: flex;
   align-items: center;
@@ -552,7 +563,7 @@ button {
 
 .listingType {
   padding: 0.25rem 0.5rem;
-  background-color: #00cc66;
+  background-color: #00d9ff;
   color: #ffffff;
   border-radius: 2rem;
   display: inline;
@@ -646,6 +657,7 @@ button {
 .profileHeader {
   display: flex;
   justify-content: space-between;
+  margin: 0 1rem;
   align-items: center;
 }
 
@@ -655,7 +667,7 @@ button {
   font-size: 1rem;
   font-weight: 600;
   color: #ffffff;
-  background-color: #00cc66;
+  background-color: #00d9ff;
   padding: 0.25rem 0.75rem;
   border-radius: 1rem;
 }
@@ -663,6 +675,7 @@ button {
 .profileDetailsHeader {
   display: flex;
   justify-content: space-between;
+  margin: 0 1rem;
   max-width: 500px;
 }
 
@@ -673,13 +686,14 @@ button {
 .changePersonalDetails {
   cursor: pointer;
   font-weight: 600;
-  color: #00cc66;
+  color: #00d9ff;
 }
 
 .profileCard {
   background-color: #ffffff;
   border-radius: 1rem;
   padding: 1rem;
+  margin: 0 1rem;
   box-shadow: rgba(0, 0, 0, 0.2);
   max-width: 500px;
 }
@@ -724,6 +738,7 @@ button {
   background-color: #ffffff;
   border-radius: 1rem;
   padding: 0.25rem 1rem;
+  margin: 0 1rem;
   box-shadow: rgba(0, 0, 0, 0.2);
   margin-top: 2rem;
   font-weight: 600;
@@ -735,11 +750,14 @@ button {
 
 .listingText {
   margin-top: 3rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
   font-weight: 600;
 }
 
 .lisitingsList {
   padding: 0;
+  margin: 0 1rem;
 }
 
 .formLabel {
@@ -750,6 +768,12 @@ button {
 
 .formButtons {
   display: flex;
+}
+
+.categoryButtons {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 1rem;
 }
 
 .formButton,
@@ -771,7 +795,7 @@ button {
 }
 
 .formButtonActive {
-  background-color: #00cc66;
+  background-color: #00d9ff;
   color: #ffffff;
 }
 
@@ -828,7 +852,7 @@ button {
 }
 
 .formInputFile::-webkit-file-upload-button {
-  background-color: #00cc66;
+  background-color: #00d9ff;
   border: none;
   color: #ffffff;
   font-weight: 600;
