--- a/src/index.css
+++ b/src/index.css
@@ -150,6 +150,7 @@ button {
 .pageHeader {
   font-size: 2rem;
   font-weight: 800;
+  margin: 2rem 1rem 0 1rem;
 }
 
 .navbar {
@@ -335,6 +336,7 @@ button {
 .exploreHeading,
 .exploreCategoryHeading {
   font-weight: 700;
+  margin: 1rem 1rem;
 }
 
 .exploreCategoryHeading {
@@ -409,11 +411,12 @@ button {
   width: 30%;
   min-width: 200px;
   min-height: 200px;
+  margin: 0 .5rem;
 }
 
 .exploreCategoryImg {
   min-height: 185px;
-  height: 15vw;
+  height: 20vw;
   width: 100%;
   border-radius: 1.5rem;
   object-fit: fill;
@@ -425,8 +428,21 @@ button {
   text-align: center;
 }
 
+@media (max-width: 430px) {
+  .exploreCategories a {
+      width: 40%;
+      min-width: 175px;
+      min-height: 175px;
+      margin: .5rem;
+    }
+}
+
 .category {
   margin-bottom: 10rem;
+}
+
+.category p {
+  margin: 1rem;
 }
 
 .categoryListings {
@@ -437,7 +453,7 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1rem;
+  margin: 1rem;
   position: relative;
   background: #ffffff;
   border-radius: 1.5rem;
@@ -456,37 +472,9 @@ button {
   object-fit: cover;
 }
 
-@media (min-width: 1024px) {
-  .categoryListingImg {
-    height: 215px;
-    width: 215px;
-  }
-}
-
 .categoryListingDetails {
   width: 80%;
   margin-left: 1rem;
-}
-
-@media (min-width: 1024px) {
-  .categoryListingDetails {
-    width: 100%;
-    margin-left: 1rem;
-  }
-}
-
-@media (max-width: 1023px) {
-  .categoryListingImg {
-      margin: .5rem .5rem;
-      height: 20%;
-      width: 20%;
-    }
-}
-
-@media (max-width: 525px) {
-  .categoryListingImg {
-      margin: .25rem .25rem;
-    }
 }
 
 .categoryListingLocation {
@@ -504,13 +492,13 @@ button {
 }
 
 .categoryListingPrice {
-  margin-top: 0.5rem;
   font-weight: 600;
   font-size: 1.1rem;
   color: #006eff;
-  margin-bottom: 0;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
+  margin: 0.5rem 0;
 }
 
 .categoryListingPriceSeparator {
@@ -523,10 +511,44 @@ button {
   max-width: 275px;
 }
 
+.starRating {
+  width: 16px;
+  height: 16px;
+}
+
 .categoryListingInfoText {
   font-weight: 500;
-  font-size: 0.7rem;
-  margin-left: 10px;
+  font-size: 1rem;
+  margin: 0.5rem;
+}
+
+@media (min-width: 1024px) {
+  .categoryListingImg {
+    height: 215px;
+    width: 215px;
+    margin: 1rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .categoryListingDetails {
+    width: 100%;
+    margin-left: 1rem;
+  }
+}
+
+@media (max-width: 1023px) {
+  .categoryListingImg {
+    margin: .5rem;
+    height: 20%;
+    width: 20%;
+  }
+}
+
+@media (max-width: 525px) {
+  .categoryListingImg {
+    margin: .25rem;
+  }
 }
 
 @media (max-width: 425px) {
@@ -536,6 +558,16 @@ button {
 
   .categoryListingPrice {
     font-size: .85rem;
+  }
+
+  .starRating img{
+    margin: 0 0.5rem 0.25rem 0.5rem;
+  }
+
+  .categoryListingInfoText {
+    font-weight: 500;
+    font-size: 0.8rem;
+    margin: 0.25rem;
   }
 
   .removeIcon {
@@ -701,7 +733,6 @@ button {
 .profileHeader {
   display: flex;
   justify-content: space-between;
-  margin: 0 1rem;
   align-items: center;
 }
 
@@ -714,6 +745,7 @@ button {
   background-color: #006eff;
   padding: 0.25rem 0.75rem;
   border-radius: 1rem;
+  margin: 2rem 1rem 0 1rem;
 }
 
 .profileDetailsHeader {
@@ -801,7 +833,6 @@ button {
 
 .listingsList {
   padding: 0;
-  margin: 0 1rem;
 }
 
 .formLabel {
