--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,12 @@ button {
   }
 }
 
+@media (max-width: 1023px) {
+  .category {
+    margin-top: 3rem;
+  }
+}
+
 .loadingSpinnerContainer {
   position: fixed;
   top: 0;
@@ -465,16 +471,17 @@ button {
 
 .categoryListingImg {
   width: 30%;
-  height: 200px;
-  width: 200px;
+  max-height: 215px;
+  max-width: 215px;
   border: 3px #006eff;
-  border-radius: 50%;
+  border-radius: 1.5rem;
   object-fit: cover;
 }
 
 .categoryListingDetails {
   width: 80%;
   margin-left: 1rem;
+  margin: 0 auto;
 }
 
 .categoryListingLocation {
@@ -488,7 +495,7 @@ button {
 .categoryListingName {
   font-weight: 600;
   font-size: 1.25rem;
-  margin: 0;
+  margin-left: none;
 }
 
 .categoryListingPrice {
@@ -508,29 +515,51 @@ button {
 .categoryListingInfoDiv {
   display: flex;
   justify-content: start;
-  max-width: 275px;
+  width: 100%;
 }
 
-.starRating {
+.starRatings {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  padding-left: none;
+  margin-left: none;
+
+}
+.starIcon img{
   width: 16px;
   height: 16px;
+  margin: 0.25rem;
+}
+
+@media (min-width: 525px){
+  .starRatings{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.starReviews {
+  margin-left: 1rem;
 }
 
 .categoryListingInfoText {
   font-weight: 500;
   font-size: 1rem;
-  margin: 0.5rem;
+}
+
+.categoryListingInfoText p {
+  width: 100%;
 }
 
 @media (min-width: 1024px) {
-  .categoryListingImg {
-    height: 215px;
-    width: 215px;
+  .categoryListingImg Img{
+    height: 100%;
+    width: 100%;
     margin: 1rem;
   }
-}
-
-@media (min-width: 1024px) {
   .categoryListingDetails {
     width: 100%;
     margin-left: 1rem;
@@ -538,30 +567,20 @@ button {
 }
 
 @media (max-width: 1023px) {
-  .categoryListingImg {
-    margin: .5rem;
-    height: 20%;
-    width: 20%;
+  .categoryListingImg img{
+    margin: 1rem;
+    height: 100%;
+    width: 100%;
   }
 }
 
 @media (max-width: 525px) {
-  .categoryListingImg {
-    margin: .25rem;
-  }
-}
-
-@media (max-width: 425px) {
   .categoryListingName {
     font-size: 1rem;
   }
 
   .categoryListingPrice {
     font-size: .85rem;
-  }
-
-  .starRating img{
-    margin: 0 0.5rem 0.25rem 0.5rem;
   }
 
   .categoryListingInfoText {
@@ -576,6 +595,22 @@ button {
 
   .editIcon {
     margin-right: 1.25rem;
+  }
+}
+
+@media (max-width: 450px) {
+  .categoryListingName {
+    font-size: .8rem;
+  }
+
+  .categoryListingPrice {
+    font-size: .75rem;
+  }
+
+  .categoryListingInfoText {
+    font-weight: 500;
+    font-size: 0.7rem;
+    margin: 0.25rem;
   }
 }
 
@@ -940,7 +975,7 @@ button {
   margin-top: 5rem;
 }
 
-.offers {
+/* .offers {
   margin-bottom: 10rem;
 }
 
@@ -952,4 +987,4 @@ button {
   margin-left: 1rem;
   font-size: 0.8rem;
   opacity: 0.75;
-}
+} */
