--- a/src/index.css
+++ b/src/index.css
@@ -359,50 +359,69 @@ button {
 }
 
 .swiper-pagination-bullet-active {
-  background-color: #ffffff !important;
+  background-color: #000000 !important;
 }
 
-.swiperSlideDiv {
+.swiperCategoryListing {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 1rem;
   position: relative;
-  width: 100%;
-  height: 100%;
-  border-radius: 1.5rem;
   background: #ffffff;
+  border-radius: 1.5rem;
+  height: 100%;
 }
 
-.swiperSlideImg {
-  width: 100%;
-  object-fit: cover;
+.swiperCategoryListingImg {
+    width: 30%;
+    max-height: 215px;
+    max-width: 215px;
+    min-height:  140px;
+    min-width: 140px;
+    border: 3px #006eff;
+    border-radius: 1.5rem;
+    object-fit: contain;
+  }
+
+.swiperListingDetails {
+  width: 80%;
+  margin-left: 1rem;
+  margin: 0 1rem;
 }
 
-.swiperSlideText {
-  color: #ffffff;
-  position: absolute;
-  top: 70px;
-  left: 0;
+.swiperListingName {
   font-weight: 600;
-  max-width: 90%;
   font-size: 1.25rem;
-  background-color: rgba(0, 0, 0, 0.8);
-  padding: 0.5rem;
+  align-items: start;
+  margin: 0 auto;
+}
+
+.swiperListingType {
+  padding: 0.25rem 0.5rem;
+  background-color: #006eff;
+  color: #ffffff;
+  border-radius: 2rem;
+  display: inline;
+  font-weight: 600;
+  font-size: 0.8rem;
+  margin-right: 1rem;
+}
+
+.swiperListingPrice {
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: #006eff;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0.5rem 0;
 }
 
 @media (min-width: 1024px) {
   .swiperSlideText {
     font-size: 1.75rem;
   }
-}
-
-.swiperSlidePrice {
-  color: #000000;
-  position: absolute;
-  top: 143px;
-  left: 11px;
-  font-weight: 600;
-  max-width: 90%;
-  background-color: #ffffff;
-  padding: 0.25rem 0.5rem;
-  border-radius: 1rem;
 }
 
 @media (min-width: 1024px) {
