--- a/src/index.css
+++ b/src/index.css
@@ -353,9 +353,9 @@ button {
   margin-top: 3rem;
 }
 
-.swiper-container {
+.swiper-wrapper {
   min-height: 225px;
-  height: 23vw;
+  height: 30vw;
 }
 
 .swiper-pagination-bullet-active {
@@ -370,18 +370,19 @@ button {
   position: relative;
   background: #ffffff;
   border-radius: 1.5rem;
-  height: 100%;
+  height: 175px;
 }
 
 .swiperCategoryListingImg {
     width: 30%;
+    height: 100%;
     max-height: 215px;
     max-width: 215px;
     min-height:  140px;
     min-width: 140px;
     border: 3px #006eff;
     border-radius: 1.5rem;
-    object-fit: contain;
+    object-fit: cover;
   }
 
 .swiperListingDetails {
@@ -488,6 +489,19 @@ button {
   border-radius: 1.5rem;
 }
 
+.serviceMapDiv {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1rem;
+  background: #ffffff;
+  width: 100%;
+}
+
+.serviceLocationTitle {
+  margin: 1rem;
+}
+
 .categoryListingLink {
   display: contents;
 }
@@ -509,10 +523,16 @@ button {
 
 .categoryListingLocation {
   font-weight: 600;
-  font-size: 0.7rem;
+  font-size: 1.25rem;
   opacity: 0.8;
   margin-bottom: 0;
-  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.categoryListingAddress {
+  margin: 0.3rem 1rem;
+  font-weight: 400;
+  opacity: 0.8;
 }
 
 .categoryListingName {
@@ -657,11 +677,12 @@ button {
 
 .shareIconDiv {
   cursor: pointer;
-  position: fixed;
-  top: 3%;
-  right: 5%;
+  position: absolute;
+  top: 4%;
+  right: 1%;
   z-index: 2;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: #006eff;
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
