--- a/src/index.css
+++ b/src/index.css
@@ -371,6 +371,9 @@ button {
   background: #ffffff;
   border-radius: 1.5rem;
   height: 175px;
+  padding: 0.25rem 0.5rem;
+
+
 }
 
 .swiperCategoryListingImg {
@@ -398,17 +401,6 @@ button {
   margin: 0 auto;
 }
 
-.swiperListingType {
-  padding: 0.25rem 0.5rem;
-  background-color: #006eff;
-  color: #ffffff;
-  border-radius: 2rem;
-  display: inline;
-  font-weight: 600;
-  font-size: 0.8rem;
-  margin-right: 1rem;
-}
-
 .swiperListingPrice {
   font-weight: 600;
   font-size: 1.1rem;
@@ -417,6 +409,18 @@ button {
   align-items: center;
   justify-content: flex-start;
   margin: 0.5rem 0;
+}
+
+.swiperListingType {
+  background-color: #006eff;
+  color: #ffffff;
+  border-radius: 2rem;
+  font-weight: 600;
+  font-size: 0.8rem;
+  padding: 0.25rem 0.5rem;
+  margin-right: 1rem;
+  display: flex;
+
 }
 
 @media (min-width: 1024px) {
@@ -429,6 +433,17 @@ button {
   .swiperSlidePrice {
     font-size: 1.25rem;
   }
+}
+
+@media (max-width: 775px) {
+  .swiper-wrapper {
+    width: 100%;
+  }
+  /* .swiper-slide.swiper-slide-active,
+  .swiper-slide-next, 
+  .swiper-slide-prev {
+    width: 100%;
+  } */
 }
 
 .exploreCategories {
@@ -524,7 +539,6 @@ button {
 .categoryListingDetails {
   width: 80%;
   margin-left: 1rem;
-  margin: 0 auto;
 }
 
 .categoryListingLocation {
@@ -627,7 +641,11 @@ button {
     font-size: 1rem;
   }
 
-  .categoryListingPrice {
+  .categoryListingLocation {
+    width: 75%;
+  }
+  .categoryListingPrice,
+  .categoryListingLocation {
     font-size: .85rem;
   }
 
@@ -674,6 +692,11 @@ button {
   border-radius: 1rem;
   opacity: 0.7;
   margin-top: 2rem;
+}
+
+.loadMoreDiv {
+  display: flex;
+  justify-content: center;
 }
 
 .listingDetails {
