--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,12 @@ button {
   margin-right: 2rem;
 }
 
+.editServiceHeading {
+    font-size: 2rem;
+    font-weight: 800;
+    margin: 2rem auto !important;
+}
+
 .pageContainer,
 .offers,
 .profile,
@@ -322,7 +328,7 @@ button {
     margin-bottom: 10rem;
   }
 }
-
+/* .exploreHeading is in Slider */
 .exploreHeading,
 .exploreCategoryHeading {
   font-weight: 700;
@@ -914,6 +920,12 @@ button {
 
 .profileAddressActive {
   background-color: rgba(44, 44, 44, 0.1);
+}
+
+.createServiceHeading {
+      font-size: 2rem;
+      font-weight: 800;
+      margin: 2rem auto;
 }
 
 .createListing {
