Delete null service, create new one, adjust styling

--- a/src/index.css
+++ b/src/index.css
@@ -1165,6 +1165,11 @@ button {
   margin-top: 5rem;
 }
 
+.noReviewsPar {
+  display: flex;
+  justify-content: center;
+}
+
 .reviewsDisplay {
   padding: 0;
 }
