--- a/src/index.css
+++ b/src/index.css
@@ -104,26 +104,13 @@ button {
 .profile,
 .listingDetails,
 .category,
+.profileServiceList
 .explore {
   margin: 1rem;
 }
 
-@media (min-width: 1024px) {
-
-  .pageContainer,
-  .offers,
-  .profile,
-  .listingDetails,
-  .category,
-  .explore {
-    margin: 3rem;
-  }
-}
-
-@media (max-width: 1023px) {
-  .category {
-    margin-top: 3rem;
-  }
+.profileServiceList {
+  margin-left: 1rem;
 }
 
 .loadingSpinnerContainer {
@@ -158,7 +145,8 @@ button {
   }
 }
 
-.pageHeader {
+.pageHeader,
+.categoryHeader {
   font-size: 2rem;
   font-weight: 800;
   margin: 2rem 1rem 0 1rem;
@@ -266,14 +254,6 @@ button {
   cursor: pointer;
 }
 
-@media (min-width: 1024px) {
-
-  .signInBar,
-  .signUpBar {
-    justify-content: start;
-  }
-}
-
 .signInText,
 .signUpText {
   font-size: 1.5rem;
@@ -291,13 +271,6 @@ button {
   border-radius: 50%;
 }
 
-@media (min-width: 1024px) {
-
-  .signInButton,
-  .signUpButton {
-    margin-left: 3rem;
-  }
-}
 
 .socialLogin {
   margin-top: 4rem;
@@ -332,22 +305,22 @@ button {
   margin-bottom: 3rem;
 }
 
-@media (min-width: 1217px) {
-  .explore {
-    margin-bottom: 10rem;
-  }
-}
+/* 
 
-@media (max-height: 536) {
-  .explore {
-    margin-bottom: 10rem;
-  }
-}
-/* .exploreHeading is in Slider */
+    HEADINGS
+
+*/
 .exploreHeading,
+.swiperHeading,
 .exploreCategoryHeading {
   font-weight: 700;
   margin: 1rem 1rem;
+}
+
+.createServiceHeading {
+  font-size: 2rem;
+  font-weight: 800;
+  margin: 2rem 0 1rem 0;
 }
 
 .exploreParagraphHeading {
@@ -358,6 +331,12 @@ button {
   margin-top: 3rem;
 }
 
+/*
+
+    SERVICE CARDS
+
+*/
+
 .swiper-wrapper {
   min-height: 225px;
   height: 30vw;
@@ -367,9 +346,12 @@ button {
   background-color: #000000 !important;
 }
 
-.swiperCategoryListing {
+.swiperExploreServiceCard,
+.serviceItemCard, 
+.servicePageCard,
+.profileServices {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   margin: 1rem;
   position: relative;
@@ -377,83 +359,158 @@ button {
   border-radius: 1.5rem;
   height: 175px;
   padding: 0.25rem 0.5rem;
+  cursor: pointer;
 }
 
-.swiperCategoryListingImg {
-    width: 30%;
-    height: 100%;
-    max-height: 215px;
-    max-width: 215px;
-    min-height:  140px;
-    min-width: 140px;
+.profileServices {
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.serviceItemCard {
+  width: 100%;
+  margin-left: 0;
+}
+
+.swiperExploreServiceImg,
+.categoryServiceImg,
+.servicePageImg {
+    width: 10rem;
+    height: 10rem;
     border: 3px #006eff;
-    border-radius: 1.5rem;
+    border-radius: 50%;
     object-fit: cover;
   }
 
-.swiperListingDetails {
-  width: 80%;
+.swiperServiceDetails,
+.categoryServiceDetails,
+.servicePageDetailsList,
+.servicePageDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   margin-left: 1rem;
-  margin: 0 1rem;
 }
 
-.swiperListingQuote {
-      margin: 0.3rem auto;
+.servicePageDetails {
+  margin-left: 1rem;
+}
+
+.servicePageDetailsList {
+  list-style-type: none;
+  padding: 0;
+  margin-left: 0;
+  margin-top: 0;
+}
+
+.servicePageDetailsFaCheck {
+  color: #03c800;
+}
+
+.listingDetailsList li {
+  margin: 0.3rem 0;
+  font-weight: 500;
+  opacity: 0.8;
+}
+
+.swiperServiceQuote,
+.categoryServiceQuote {
+      margin-top: 0.3rem;
+      margin-bottom: 0.3rem;
       font-weight: 400;
       opacity: 0.8;
       font-size: 0.75rem;
 }
 
-.swiperListingName {
+.swiperServiceName,
+.categoryServiceName,
+.servicePageName {
   font-weight: 600;
   font-size: 1.25rem;
   align-items: start;
-  margin: 0 auto;
+  margin-top: 0;
+  margin-bottom: 0.3rem;
 }
 
-.swiperListingPrice {
+.swiperServicePrice,
+.categoryServicePrice,
+.servicePagePrice {
   font-weight: 600;
   font-size: 1.1rem;
   color: #006eff;
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  margin: 0.5rem 0;
+  margin: 0.3rem 0;
 }
 
-.swiperListingType {
-  background-color: #006eff;
+.servicePageTypeSavingsDiv,
+.reviewHeaderDiv {
+  display: flex;
+  flex-direction: row;
+}
+
+.swiperServiceType,
+.servicePageType,
+.servicePageSavingsPrice,
+.reviewCoachingType,
+.reviewPriceType {
+  background-color: #6c6c6c;
   color: #ffffff;
   border-radius: 2rem;
+  display: flex;
+  align-items: center;
   font-weight: 600;
   font-size: 0.8rem;
+  margin: 1.25rem .5rem;
   padding: 0.25rem 0.5rem;
-  margin-right: 1rem;
+  height: 1.5rem;
+}
+
+.servicePageSavingsPrice, 
+.servicePageType,
+.swiperServiceType {
+  margin-top: 0.3rem;
+  margin-bottom: 0.3rem;
+}
+
+.swiperServiceType {
+  margin-left: 0;
+}
+
+.servicePageType {
+  background-color: #006eff;
+  margin-left: 0;
+}
+
+.servicePageSavingsPrice {
+  color: #ffffff;
+}
+
+.servicePageSavingsPrice,
+.reviewPriceType {
+  background-color: #000000;
+  margin-left: 0;
+}
+
+.categoryServiceRatingDiv {
   display: flex;
-
+  justify-content: flex-start;
+  width: 100%;
 }
 
-@media (min-width: 1024px) {
-  .swiperSlideText {
-    font-size: 1.75rem;
-  }
+.categoryServiceStarRatings {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: none;
+    height: 1rem;
+    margin-top: 0.3rem;
 }
 
-@media (min-width: 1024px) {
-  .swiperSlidePrice {
-    font-size: 1.25rem;
-  }
-}
-
-@media (max-width: 775px) {
-  .swiper-wrapper {
-    width: 100%;
-  }
-  /* .swiper-slide.swiper-slide-active,
-  .swiper-slide-next, 
-  .swiper-slide-prev {
-    width: 100%;
-  } */
+.categoryServiceStarReviews {
+  margin-left: 1rem;
 }
 
 .exploreCategories {
@@ -483,37 +540,6 @@ button {
   text-align: center;
 }
 
-@media (max-width: 430px) {
-  .exploreCategories a {
-      width: 40%;
-      min-width: 175px;
-      min-height: 175px;
-      margin: .5rem;
-    }
-}
-
-.category {
-  margin-bottom: 10rem;
-}
-
-.category p {
-  margin: 1rem;
-}
-
-.categoryListings {
-  padding: 0;
-}
-
-.categoryListing {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 1rem;
-  position: relative;
-  background: #ffffff;
-  border-radius: 1.5rem;
-}
-
 .serviceMapDiv {
   display: flex;
   justify-content: flex-start;
@@ -537,20 +563,6 @@ button {
   display: contents;
 }
 
-.categoryListingImg {
-  width: 30%;
-  max-height: 215px;
-  max-width: 215px;
-  border: 3px #006eff;
-  border-radius: 1.5rem;
-  object-fit: cover;
-}
-
-.categoryListingDetails {
-  width: 80%;
-  margin-left: 1rem;
-}
-
 .categoryListingLocation {
   font-weight: 400;
   font-size: 1rem;
@@ -558,113 +570,32 @@ button {
   margin-bottom: 0;
 }
 
-.categoryListingAddress,
-.categoryListingQuote {
+.categoryListingAddress {
   margin: 0.3rem 1rem;
   font-weight: 400;
   opacity: 0.8;
-}
-
-.categoryListingQuote {
-  margin: 1rem auto;
-}
-
-.categoryListingName {
-  font-weight: 600;
-  font-size: 1.25rem;
-  margin-left: none;
-}
-
-.categoryListingPrice {
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #006eff;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin: 0.5rem 0;
 }
 
 .categoryListingPriceSeparator {
   margin: 0 1rem;
 }
 
-.categoryListingInfoDiv {
-  display: flex;
-  justify-content: flex-start;
-  width: 100%;
-}
 
-.starRatings {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  padding-left: none;
-  margin-left: none;
-  margin-top: 0.5rem;
-
-}
 .starIcon img{
   width: 16px;
   height: 16px;
   margin: 0.25rem;
 }
 
-@media (min-width: 525px){
-  .starRatings{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-  }
-}
-
-.categoryListingInfoText {
-  font-weight: 500;
-  font-size: 1rem;
-}
-
-.categoryListingInfoText p {
-  width: 100%;
-}
-
-@media (min-width: 1024px) {
-  .categoryListingImg Img{
-    height: 100%;
-    width: 100%;
-    margin: 1rem;
-  }
-  .categoryListingDetails {
-    width: 100%;
-    margin-left: 1rem;
-  }
-}
-
-@media (max-width: 1023px) {
-  .categoryListingImg img{
-    margin: 1rem;
-    height: 100%;
-    width: 100%;
-  }
-}
 
 @media (max-width: 525px) {
-  .categoryListingName {
-    font-size: 1rem;
-  }
 
   .categoryListingLocation {
     width: 75%;
   }
-  .categoryListingPrice,
+  
   .categoryListingLocation {
     font-size: .85rem;
-  }
-
-  .categoryListingInfoText {
-    font-weight: 500;
-    font-size: 0.8rem;
-    margin: 0.25rem;
   }
 
   .removeIcon {
@@ -673,22 +604,6 @@ button {
 
   .editIcon {
     margin-right: 1.25rem;
-  }
-}
-
-@media (max-width: 450px) {
-  .categoryListingName {
-    font-size: .8rem;
-  }
-
-  .categoryListingPrice {
-    font-size: .75rem;
-  }
-
-  .categoryListingInfoText {
-    font-weight: 500;
-    font-size: 0.7rem;
-    margin: 0.25rem;
   }
 }
 
@@ -706,7 +621,8 @@ button {
   margin-top: 2rem;
 }
 
-.loadMoreDiv {
+.loadMoreDiv,
+.categoryLoadMoreDiv {
   display: flex;
   justify-content: center;
 }
@@ -742,41 +658,6 @@ button {
   font-weight: 600;
 }
 
-.discountPrice {
-  padding: 0.25rem 0.5rem;
-  background-color: #000000;
-  color: #ffffff;
-  border-radius: 1rem;
-  font-size: 0.8rem;
-  font-weight: 600;
-  display: inline;
-}
-
-.listingType {
-  padding: 0.25rem 0.5rem;
-  background-color: #006eff;
-  color: #ffffff;
-  border-radius: 2rem;
-  display: inline;
-  font-weight: 600;
-  font-size: 0.8rem;
-  margin-right: 1rem;
-}
-
-.listingDetailsList {
-  padding: 0;
-  list-style-type: none;
-}
-
-.listingDetailsFaCheck {
-  color: #03c800;
-}
-
-.listingDetailsList li {
-  margin: 0.3rem 0;
-  font-weight: 500;
-  opacity: 0.8;
-}
 
 .listingLocationTitle {
   margin-top: 2rem;
@@ -934,12 +815,6 @@ button {
   background-color: rgba(44, 44, 44, 0.1);
 }
 
-.createServiceHeading {
-      font-size: 2rem;
-      font-weight: 800;
-      margin: 2rem auto;
-}
-
 .createListing {
   background-color: #ffffff;
   border-radius: 1rem;
@@ -952,17 +827,6 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.listingText {
-  margin-top: 3rem;
-  margin-left: 1rem;
-  margin-right: 1rem;
-  font-weight: 600;
-}
-
-.listingsList {
-  padding: 0;
 }
 
 .formLabel {
@@ -1189,10 +1053,7 @@ button {
   margin-left: 1rem;
 }
 
-.reviewHeaderDiv {
-  display: flex;
-  flex-direction: row;
-}
+
 
 .reviewName {
   font-weight: 600;
@@ -1232,25 +1093,7 @@ button {
 }
 
 
-.reviewCoachingType,
-.reviewPriceType {
-  background-color: #6c6c6c;
-  color: #ffffff;
-  border-radius: 2rem;
-  display: flex;
-  align-items: center;
-  font-weight: 600;
-  font-size: 0.8rem;
-  margin: 1.25rem .5rem;
-  padding: 0.25rem 0.5rem;
-  height: 1.5rem;
 
-}
-
-.reviewPriceType {
-  background-color: #000000;
-  margin: 1.25rem 0;
-}
 
 .reviewMessage {
   display: flex;
